baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_throws/baml_tests__diagnostic_errors__function_type_throws__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Holder {
  cb: (value: int) -> int
}
type user.HiddenHandler = (value: int) -> int
function user.accept_hidden(cb: user.HiddenHandler) -> int  [expr] {
  {  } cb(1)
}
function user.fail_hidden() -> int  [expr] {
  {  } accept_hidden(risky)
}
function user.fail_returned() -> (value: int) -> int  [expr] {
  { let local = (value: int) -> int throws string { { throw "boom" } } } local
}
function user.fail_stored() -> user.Holder  [expr] {
  {  } user.Holder { cb: risky }
}
function user.from_json(j: baml.json.json) -> user.Holder  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.nested_position(cb: ((value: int) -> int) -> int) -> int  [expr] {
  { let inner = (value: int) -> int throws string { { throw "boom" } } } cb(inner)
}
function user.risky(value: int) -> int  [expr] {
  { throw "boom" }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.Worker {
  factor: int
}
function user.builtin_map(cb: (value: int) -> int, values: int[]) -> int[]  [expr] {
  {  } values.map(cb)
}
function user.chain(cb: (value: int) -> int) -> int  [expr] {
  { let h = forward } h(cb)
}
function user.direct(cb: (value: int) -> int) -> int  [expr] {
  {  } cb(1)
}
function user.forward(cb: (value: int) -> int) -> int  [expr] {
  {  } direct(cb)
}
function user.from_json(j: baml.json.json) -> user.Worker  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.member_map(worker: user.Worker, values: int[]) -> int[]  [expr] {
  {  } values.map(worker.scale)
}
function user.scale(self: ?, value: int) -> int  [expr] {
  {  } self.factor Mul value
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "factor": self.factor.to_json() }
}
