baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_throws/baml_tests__diagnostic_errors__function_type_throws__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
type user.HiddenHandler = (value: int) -> int throws never
class user.Holder {
  cb: (value: int) -> int throws never
}
function user.accept_hidden(cb: user.HiddenHandler) -> int throws never {
  { : int
    cb(1) : int
  }
}
function user.nested_position(cb: ((value: int) -> int throws never) -> int throws never) -> int throws never {
  { : int
    let inner = : (value: int) -> int throws string
      (value: int) -> int throws string { ... } : (value: int) -> int throws string
        {
          throw "boom"
        }
    cb<__effect_param_0>(inner) : int
  }
  !! 291..296: type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
}
lambda user.nested_position {
}
function user.risky(value: int) -> int throws string {
  { : never
    throw "boom" : "boom"
  }
}
function user.fail_hidden() -> int throws never {
  { : int
    accept_hidden(risky) : int
  }
  !! 417..422: type mismatch: expected user.HiddenHandler, got (value: int) -> int throws string
}
function user.fail_stored() -> user.Holder throws never {
  { : user.Holder
    Holder { cb: risky } : user.Holder
  }
  !! 477..482: type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
}
function user.fail_returned() -> (value: int) -> int throws never throws never {
  { : (value: int) -> int throws string
    let local = : (value: int) -> int throws string
      (value: int) -> int throws string { ... } : (value: int) -> int throws string
        {
          throw "boom"
        }
    local : (value: int) -> int throws string
  }
  !! 611..616: type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
}
lambda user.fail_returned {
}
type user.HiddenHandler$stream = unknown
class user.Holder$stream {
  cb: unknown
}
class user.Worker {
  factor: int
}
function user.Worker.scale(self: user.Worker, value: int) -> int throws never {
  { : int
    self.factor * value : int
  }
}
function user.direct(cb: (value: int) -> int throws never) -> int throws never {
  { : int
    cb<__effect_param_0>(1) : int
  }
}
function user.forward(cb: (value: int) -> int throws never) -> int throws never {
  { : int
    direct<__effect_param_0>(cb) : int
  }
}
function user.chain(cb: (value: int) -> int throws never) -> int throws never {
  { : int
    let h = forward : (cb: (value: int) -> int throws __effect_param_0) -> int throws __effect_param_0
    h<__effect_param_0>(cb) : int
  }
}
function user.builtin_map(cb: (value: int) -> int throws never, values: int[]) -> int[] throws never {
  { : int[]
    values.map<U, E>(cb) : int[]
  }
}
function user.member_map(worker: user.Worker, values: int[]) -> int[] throws never {
  { : int[]
    values.map<U, E>(worker.scale) : int[]
  }
}
class user.Worker$stream {
  factor: null | int
}
