baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_throws/baml_tests__diagnostic_errors__function_type_throws__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
    ╭─[ negative.baml:15:6 ]
    │
 15 │   cb(inner)
    │      ──┬──  
    │        ╰──── type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected user.HiddenHandler, got (value: int) -> int throws string
    ╭─[ negative.baml:23:17 ]
    │
 23 │   accept_hidden(risky)
    │                 ──┬──  
    │                   ╰──── type mismatch: expected user.HiddenHandler, got (value: int) -> int throws string
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
    ╭─[ negative.baml:27:16 ]
    │
 27 │   Holder { cb: risky }
    │                ──┬──  
    │                  ╰──── type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
    ╭─[ negative.baml:34:3 ]
    │
 34 │   local
    │   ──┬──  
    │     ╰──── type mismatch: expected (value: int) -> int throws never, got (value: int) -> int throws string
    │ 
    │ Note: Error code: E0001
────╯
